# GTopia

./: .gitignore  .gitmodules  LICENSE  README.md  defined_symbols.txt  fiel.bat  used_symbols.csv
CMake/: CMakeLists.txt  GameServer.cmake  ItemManager.cmake  Master.cmake  Source.cmake  WorldRenderer.cmake
Configs/: README.md  config.txt  gtopia.sql  news.txt  playmods.txt  roles.txt  servers.txt  store.txt  telnet_config.txt
Docs/: achievement_parity_batches_2026-04-17.md  command_parity_2026-04-16.md  feature_patch_2026-04-13.md  login_data_safety_predeploy.sql  parity_audit_2026-04-17_release.md
GameServer/: CMakeLists.txt  Context.cpp  Context.h  Main.cpp
GameServer/Command/: AddLevel.cpp  AddLevel.h  AddRole.cpp  AddRole.h  AddTitle.cpp  AddTitle.h  Ban.cpp  Ban.h  Clear.cpp  Clear.h  ClearInv.cpp  ClearInv.h  CommandBase.h  CommandTargetUtils.cpp  CommandTargetUtils.h  Effect.cpp  Effect.h  Find.cpp  Find.h  GetRoles.cpp  GetRoles.h  Ghost.cpp  Ghost.h  GiveItem.cpp  GiveItem.h  GrowIDCmd.cpp  GrowIDCmd.h  Help.cpp  Help.h  InvSee.cpp  InvSee.h  ItemInfo.cpp  ItemInfo.h  Kick.cpp  Kick.h  KickAll.cpp  KickAll.h  ListRoles.cpp  ListRoles.h  Magic.cpp  (+73 more)
GameServer/Component/: ChemsynthComponent.cpp  ChemsynthComponent.h  FossilComponent.cpp  FossilComponent.h  GeigerComponent.cpp  GeigerComponent.h  GhostComponent.cpp  GhostComponent.h  KickAllComponent.cpp  KickAllComponent.h
GameServer/Event/TCP/: TCPEventAuth.cpp  TCPEventCrossServerAction.cpp  TCPEventHeartBeat.cpp  TCPEventHeartBeat.h  TCPEventHello.cpp  TCPEventHello.h  TCPEventKillServer.cpp  TCPEventKillServer.h  TCPEventPlayerSession.cpp  TCPEventPlayerSession.h  TCPEventRenderWorld.cpp  TCPEventRenderWorld.h  TCPEventRenderWorldRes.cpp
GameServer/Event/UDP/GameMessage/: Buy.cpp  Buy.h  DialogReturn.cpp  DialogReturn.h  Drop.cpp  Drop.h  EnterGame.cpp  EnterGame.h  GrowID.cpp  GrowID.h  Input.cpp  Input.h  JoinRequest.cpp  JoinRequest.h  MenuClickFavorite.cpp  MenuClickFavorite.h  MenuClickInfo.cpp  MenuClickInfo.h  MenuClickLeaderboards.cpp  MenuClickLeaderboards.h  MenuClickRecycle.cpp  MenuClickRecycle.h  MenuClickSecure.cpp  MenuClickSecure.h  MenuClickSocial.cpp  MenuClickSocial.h  QuitToExit.cpp  QuitToExit.h  RefreshItemData.h  RefreshTributeData.cpp  RefreshTributeData.h  Respawn.cpp  Respawn.h  SetSkin.cpp  SetSkin.h  Store.cpp  Store.h  StoreNavigate.cpp  StoreNavigate.h  TradeAccept.cpp  (+13 more)
GameServer/Event/UDP/GamePacket/: BlockActivate.cpp  BlockActivate.h  ItemActivateObjectRequest.cpp  ItemActivateObjectRequest.h  ItemActivateRequest.cpp  ItemActivateRequest.h  PlayerCollect.cpp  PlayerCollect.h  PlayerPunched.cpp  PlayerPunched.h  PlayerSendIconState.cpp  PlayerSendIconState.h  State.cpp  State.h  TileChangeRequest.cpp  TileChangeRequest.h  UseDoorRequest.cpp  UseDoorRequest.h
GameServer/Guild/: Guild.cpp  Guild.h  GuildManager.cpp  GuildManager.h
GameServer/Player/: AchievementCatalog.cpp  AchievementCatalog.h  GamePlayer.cpp  GamePlayer.h  PlayerManager.cpp  PlayerManager.h  PlayerTrade.cpp  PlayerTrade.h
GameServer/Player/Dialog/: ChemsynthDialog.cpp  ChemsynthDialog.h  DoorDialog.cpp  DoorDialog.h  DropDialog.cpp  DropDialog.h  LockDialog.cpp  LockDialog.h  MachineDialog.cpp  MachineDialog.h  PathMarkerDialog.cpp  PathMarkerDialog.h  PlayerDialog.cpp  PlayerDialog.h  RegisterDialog.cpp  RegisterDialog.h  RenderWorldDialog.cpp  SignDialog.cpp  SignDialog.h  TrashDialog.cpp  TrashDialog.h
GameServer/Prize/: PrizeManager.cpp  PrizeManager.h
GameServer/Server/: GameServer.cpp  GameServer.h  MasterBroadway.cpp  MasterBroadway.h
GameServer/Store/: StoreCatalog.cpp  StoreCatalog.h
GameServer/World/: World.cpp  World.h  WorldManager.cpp  WorldManager.h  WorldPathfinding.cpp  WorldPathfinding.h
GrowClientWin/: CMakeLists.txt  README.md
GrowClientWin/src/: main.cpp
HTTPServer/: main.go
ItemEnumGenerator/: README.md  package-lock.json
ItemEnumGenerator/src/: main.ts
ItemManager/: CMakeLists.txt  Main.cpp
Master/: CMakeLists.txt  Main.cpp
Master/Player/: GamePlayer.cpp  GamePlayer.h  PlayerManager.cpp  PlayerManager.h
Master/Server/: GameServer.cpp  GameServer.h  ServerManager.cpp  ServerManager.h  TelnetServer.cpp  TelnetServer.h
Master/World/: WorldManager.cpp  WorldManager.h
ReGTByVinz/: CMakeCache.txt  CMakeLists.txt  README.md  setup_build_regt.bat
ReGTByVinz/src/: ReGTClient.cpp  ReGTClient.h  main.cpp
Source/: ContextBase.cpp  ContextBase.h
Source/Algorithm/: ChemsynthAlgorithm.cpp  ChemsynthAlgorithm.h  GhostAlgorithm.cpp  GhostAlgorithm.h  LockAlgorithm.h
Source/Database/: DatabaseManager.cpp  DatabaseManager.h  DatabasePool.cpp  DatabasePool.h  DatabaseResult.cpp  DatabaseResult.h  DatabaseWorker.cpp  DatabaseWorker.h  QueryUtils.h
Source/Event/: EventDispatcher.h
Source/IO/: File.cpp  File.h
Source/Item/: ChemsynthAlgorithm.cpp  ChemsynthAlgorithm.h  ItemInfo.cpp  ItemInfo.h  ItemInfoManager.cpp  ItemInfoManager.h  LockAlgorithm.cpp  LockAlgorithm.h
Source/Math/: Color.cpp  Color.h  Math.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Source/Memory/: MemoryBuffer.cpp  MemoryBuffer.h  RingBuffer.cpp  RingBuffer.h
Source/Network/: NetClient.h  NetEntity.h  NetHTTP.cpp  NetHTTP.h  NetSocket.cpp  NetSocket.h
Source/OS/: OSPrecompiled.h
Source/Packet/: GamePacket.h  PacketUtils.h
Source/Player/: CharacterData.cpp  CharacterData.h  PlayMod.cpp  PlayMod.h  PlayModManager.cpp  PlayModManager.h  Player.cpp  Player.h  PlayerInventory.cpp  PlayerInventory.h  PlayerLoginDetail.cpp  PlayerLoginDetail.h  PlayerTribute.cpp  Role.cpp  Role.h  RoleManager.cpp  RoleManager.h
Source/Proton/: ProtonUtils.cpp  (+1 more)
Util/: convert_playmods_vector.py  generate_enums.py  role_perms.txt  test_login_safety_regression.py
WorldRenderer/: AvatarRenderer.cpp  AvatarRenderer.h  CMakeLists.txt  Context.cpp  Context.h  Main.cpp  MasterBroadway.cpp  MasterBroadway.h  Renderer2D.cpp  Renderer2D.h  WeatherRenderer.cpp  WeatherRenderer.h  WorldRenderer.cpp  WorldRenderer.h  WorldRendererManager.cpp  WorldRendererManager.h  WorldTileLut.h
build_vs/: CMakeCache.txt
(+78 files in other folders)
